--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.19.3+build.5
 loader_version=0.18.4
 kotlin_loader_version=1.13.8+kotlin.2.3.0
 # Mod Properties
-mod_version=1.0
+mod_version=1.19.3-1.0
 maven_group=me.maxos.votive
 archives_base_name=votivebackgroundmusic
 # Dependencies
